--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/style.css">
     <title>LOTR Quiz</title>
 </head>
 <body>
+    <div class="container">
+        
+    </div>
     
 </body>
+<script src="assets/js/jquery-3.5.1.min.js"></script>
+<script src="assets/js/tilt.min.js"></script>
 </html>
