add background image to body

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, impedit esse molestiae molestias eveniet cumque facere cum libero ipsam recusandae aspernatur quos tenetur nostrum vel voluptas? Dolor harum perspiciatis atque.
     </div>
     
 </body>
