add logo to leftSide of div in container

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 </head>
 <body>
     <div class="container">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, impedit esse molestiae molestias eveniet cumque facere cum libero ipsam recusandae aspernatur quos tenetur nostrum vel voluptas? Dolor harum perspiciatis atque.
+     <div class="leftSide">
+        <img src="assets/images/Sauron-logo.png" alt="Quiz logo">
+
+     </div>
+     <div class="rightSide">
+        
+     </div>
     </div>
     
 </body>
