--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
      <div class="leftSide">
-        <img src="assets/images/Sauron-logo.png" alt="Quiz logo">
+        <img src="assets/images/Sauron-logo.png" alt="Quiz logo" class="tilt"/>
 
      </div>
      <div class="rightSide">
@@ -23,6 +23,7 @@
           <li>Get results anytimes</li>
 
         </ul>
+        <a href="questions.html">Let's Start Quiz</a>
         
      </div>
     </div>
@@ -30,4 +31,9 @@
 </body>
 <script src="assets/js/jquery-3.5.1.min.js"></script>
 <script src="assets/js/tilt.min.js"></script>
+<script>
+    $(".tilt").tilt({
+
+    });
+</script>
 </html>
