--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
     
 </body>
 <script src="assets/js/jquery-3.5.1.min.js"></script>
-<script src="assets/js/tilt.min.js"></script>
-<script>
-    $(".tilt").tilt({
+<script src="js/tilt.min.js"></script>
 
+<script>
+      $(".tilt").tilt({
+        scale: 1.2,
     });
 </script>
+
 </html>
