--- a/questions.html
+++ b/questions.html
@@ -8,8 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-    
-</html>
+
+    <div class="box">
+        
+    </div>
+
+    </div>
+
 </body>
 <script src="assets/js/jquery-3.5.1.min.js"></script>
     <script src="assets/js/quiz.js"></script>
