style class title for question html page

--- a/questions.html
+++ b/questions.html
@@ -10,10 +10,14 @@
 <body>
 
     <div class="box">
-        
-    </div>
+
+        <div class="title">
+            Online Quiz Application 
+        </div>
 
     </div>
+
+    
 
 </body>
 <script src="assets/js/jquery-3.5.1.min.js"></script>
