add three class called header, scoreBox and timer box

--- a/questions.html
+++ b/questions.html
@@ -14,6 +14,13 @@
         <div class="title">
             Online Quiz Application 
         </div>
+        <div class="header">
+            <div class="scoreBox">
+                <div class="timer box">
+                    
+                </div>
+            </div>
+        </div>
 
     </div>
 
