--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
 </body>
 <script src="assets/js/jquery-3.5.1.min.js"></script>
-<script src="js/tilt.min.js"></script>
+<script src="assets/js/tilt.min.js"></script>
 
 
 
