--- a/questions.html
+++ b/questions.html
@@ -8,26 +8,20 @@
     <title>Document</title>
 </head>
 <body>
-
     <div class="box">
 
         <div class="title">
-            Online Quiz Application 
+            Online Quiz Application
         </div>
-        <div class="header">
-            <div class="scoreBox">
-                <div class="timer box">
-                    
-                </div>
-            </div>
-        </div>
+
+<div class="header">
+    <div class="scoreBox">Score : 0</div>
+    <div class="timerBox">Time Left : 00:00</div>
+</div>
 
     </div>
-
-    
-
 </body>
 <script src="assets/js/jquery-3.5.1.min.js"></script>
     <script src="assets/js/quiz.js"></script>
-    <script src="assets/s/script.js"></script>
+    <script src="assets/js/script.js"></script>
 </html>
