add grid to text and add buttons in questions.html file

--- a/questions.html
+++ b/questions.html
@@ -19,7 +19,26 @@
     <div class="timerBox">Time Left : 00:00</div>
 </div>
 
+  <div class="questionBox">
+    Who directed Lord Of The Rings?
+  </div>
+
+  <div class="optionBox">
+    <span>Peter Jackson</span>
+    <span>Steven Spielberg</span>
+    <span>James Cameron</span>
+    <span>Christopher Nolan</span>
+  </div>
+  <div class="footer">
+    <button>
+        Next
+    </button>
+    <button>
+        Show Results
+     </button>
+  </div>
     </div>
+
 </body>
 <script src="assets/js/jquery-3.5.1.min.js"></script>
     <script src="assets/js/quiz.js"></script>
