--- a/questions.html
+++ b/questions.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="box">
+    <div class="box" id="questionScreen" style="display: none;">
 
         <div class="title">
             Online Quiz Application
@@ -37,6 +37,11 @@
         Show Results
      </button>
   </div>
+    </div>
+
+
+    <div class="box" id="resultScreen">
+          result screen
     </div>
 
 </body>
