add class box and id resultBox for result page

--- a/questions.html
+++ b/questions.html
@@ -41,7 +41,19 @@
 
 
     <div class="box" id="resultScreen">
-          result screen
+      <div class="title">
+        Online Quiz Results
+    </div>
+     <div class="resultBox">
+      <label>Questions :</label>
+      <span id="totalQuestion">10</span>
+      <label>Attempt :</label>
+      <span id="attemptQuestion">01</span>
+      <label>Correct :</label>
+      <span id="correctAnswers">01</span>
+      <label>Wrong :</label>
+      <span id="wrongAnswers">01</span>
+     </div>
     </div>
 
 </body>
