--- a/questions.html
+++ b/questions.html
@@ -48,11 +48,14 @@
       <label>Questions :</label>
       <span id="totalQuestion">10</span>
       <label>Attempt :</label>
-      <span id="attemptQuestion">01</span>
+      <span id="attemptQuestion">1</span>
       <label>Correct :</label>
-      <span id="correctAnswers">01</span>
+      <span id="correctAnswers">1</span>
       <label>Wrong :</label>
-      <span id="wrongAnswers">01</span>
+      <span id="wrongAnswers">1</span>
+     </div>
+     <div class="buttonBox">
+      <a href="index.html">Start Again</a>
      </div>
     </div>
 
