--- a/questions.html
+++ b/questions.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="box" id="questionScreen" style="display: none;">
+    <div class="box" id="questionScreen">
 
         <div class="title">
             Online Quiz Application
@@ -40,7 +40,7 @@
     </div>
 
 
-    <div class="box" id="resultScreen">
+    <div class="box" id="resultScreen" style="display: none;">
       <div class="title">
         Online Quiz Results
     </div>
