add 10 questions to quiz.js

--- a/questions.html
+++ b/questions.html
@@ -16,7 +16,7 @@
 
 <div class="header">
     <div class="scoreBox">Score : 0</div>
-    <div class="timerBox">Time Left : 00:00</div>
+    <div class="timerBox">Time Left : <span></span></div>
 </div>
 
   <div class="questionBox">
