--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <title>LOTR Quiz</title>
 </head>
 <body>
@@ -29,7 +30,7 @@
     </div>
     
 </body>
-<script src="assets/js/jquery-3.5.1.min.js"></script>
+<script src="assets/js/jquery.js"></script>
 <script src="assets/js/tilt.min.js"></script>
 
 
