--- a/questions.html
+++ b/questions.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
@@ -24,10 +25,10 @@
   </div>
 
   <div class="optionBox">
-    <span>Peter Jackson</span>
-    <span>Steven Spielberg</span>
-    <span>James Cameron</span>
-    <span>Christopher Nolan</span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
   </div>
   <div class="footer">
     <button>
@@ -60,7 +61,7 @@
     </div>
 
 </body>
-<script src="assets/js/jquery-3.5.1.min.js"></script>
+<script src="assets/js/jquery.js"></script>
     <script src="assets/js/quiz.js"></script>
     <script src="assets/js/script.js"></script>
 </html>
