add function to check answer and click

--- a/questions.html
+++ b/questions.html
@@ -25,10 +25,10 @@
   </div>
 
   <div class="optionBox">
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
+    <span onclick="checkAnswer(this)" data-opt="1"></span>
+    <span onclick="checkAnswer(this)" data-opt="2"></span>
+    <span onclick="checkAnswer(this)" data-opt="3"></span>
+    <span onclick="checkAnswer(this)" data-opt="4"></span>
   </div>
   <div class="footer">
     <button>
