style the right for green and wrong red

--- a/questions.html
+++ b/questions.html
@@ -16,7 +16,7 @@
         </div>
 
 <div class="header">
-    <div class="scoreBox">Score : 0</div>
+    <div class="scoreBox">Score :  <span>0</span></div>
     <div class="timerBox">Time Left : <span></span></div>
 </div>
 
