if come to end of quiz show result and then return in function showNext

--- a/questions.html
+++ b/questions.html
@@ -31,7 +31,7 @@
     <span onclick="checkAnswer(this)" data-opt="4"></span>
   </div>
   <div class="footer">
-    <button>
+    <button onClick="showNext()">
         Next
     </button>
     <button>
