add function to showresult if quiz is not finished

--- a/questions.html
+++ b/questions.html
@@ -34,7 +34,7 @@
     <button onClick="showNext()">
         Next
     </button>
-    <button>
+    <button onclick="showResult(1)">
         Show Results
      </button>
   </div>
@@ -49,11 +49,11 @@
       <label>Questions :</label>
       <span id="totalQuestion">10</span>
       <label>Attempt :</label>
-      <span id="attemptQuestion">1</span>
+      <span id="attemptQuestion">0</span>
       <label>Correct :</label>
-      <span id="correctAnswers">1</span>
+      <span id="correctAnswers">0</span>
       <label>Wrong :</label>
-      <span id="wrongAnswers">1</span>
+      <span id="wrongAnswers">0</span>
      </div>
      <div class="buttonBox">
       <a href="index.html">Start Again</a>
