--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Welcome to The Lord Of The Rings Quiz</h1>
         <h2>Features :-</h2>
         <ul>
-          <li>10 Questions (10 sec each)</li>
+          <li>10 Questions</li>
           <li>200 seconds timer</li>
           <li>Random Questions</li>
           <li>Get results anytimes</li>
